--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,1 +1,7 @@
-index
+{% extends 'core/base.html' %}
+
+{% block title %}Welcome{% endblock %}
+
+{% block content %}
+hello from index
+{% endblock %}
